<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>communication_interface</name>
  <version>0.0.0</version>
  <description>Package to define the communication method between the operator and the robot</description>
  <maintainer email="simeon.capy@rs.tus.ac.jp">Yoshida Lab (Siméon Capy)</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>python3-nep-pip</exec_depend>
  <exec_depend>python3-netifaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
